syntax = "proto3";

option go_package = "github.com/sim1222/mixi2proto/pb";

message CreatePost {
	string body = 1;
	oneof nazoone {
		uint32 nazo1 = 6;
		uint32 nazo2 = 7;
	}
}